fix story overflow issue

--- a/frontend/src/pages/story/story.css
+++ b/frontend/src/pages/story/story.css
@@ -32,5 +32,6 @@
   background:#000 url(stars.png) repeat top center;
   background-size: cover;
   min-height: fit-content;
+  overflow-y: hidden;
 }
   
